// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input-group should render with many input children without problems 1`] = `
<span
  className="input-group input-group_theme_alfa-on-white control-group"
  role="group"
  tabIndex="-1"
>
  <span
    className="input-group__input-case"
    key="input-0/.0"
  >
    <Input
      formNoValidate={false}
      key="1"
      size="m"
      type="text"
    />
  </span>
  <span
    className="input-group__input-case"
    key="input-1/.0"
  >
    <Input
      formNoValidate={false}
      key="2"
      size="m"
      type="text"
    />
  </span>
</span>
`;

exports[`input-group should render with only one children 1`] = `
<span
  className="input-group input-group_theme_alfa-on-white control-group"
  role="group"
  tabIndex="-1"
>
  <span
    className="input-group__input-case"
    key="input-0/.0"
  >
    <Input
      formNoValidate={false}
      key="1"
      size="m"
      type="text"
    />
  </span>
</span>
`;

exports[`input-group should render without any children 1`] = `
<span
  className="input-group input-group_theme_alfa-on-white control-group"
  role="group"
  tabIndex="-1"
/>
`;
